--- a/major_project_report/sec/letter_of_approval.tex
+++ b/major_project_report/sec/letter_of_approval.tex
@@ -14,25 +14,25 @@ The undersigned certify that they have read, and recommended to the Institute of
 
 \begin{minipage}{.80\textwidth}
 \rule{1\textwidth}{1pt}\\
-Supervisor, Mr. Daya Sagar Baral, Lecturer \\
+Supervisor: Mr. Daya Sagar Baral, Lecturer \\
 Department of Electronics and Computer Engineering\\ Institute of Engineering, Pulchowk Campus\\[1cm]
 \end{minipage}
 
 \begin{minipage}{.80\textwidth}
 \rule{1\textwidth}{1pt}\\
-Internal Examiner, Dr. Arun Kumar Timilsina, Deputy Director  \\
+Internal Examiner: Dr. Arun Kumar Timilsina, Deputy Director  \\
 CARD, Institute of Engineering, Pulchowk Campus\\[1.1cm]
 \end{minipage}
 
 \begin{minipage}{.80\textwidth}
 \rule{1\textwidth}{1pt}\\
-External Examiner, Mr. Mahesh Singh Kathayat, Associate Professor\\
+External Examiner: Mr. Mahesh Singh Kathayat, Associate Professor\\
 Kathmandu Engineering College\\[1.1cm]
 \end{minipage}
 
 \begin{minipage}{.80\textwidth}
 \rule{1\textwidth}{1pt}\\
-Coordinator, Mrs. Bibha Sthapit, Deputy Head\\
+Coordinator: Mrs. Bibha Sthapit, Deputy Head\\
 Department of Electronics and Computer Engineering\\ Institute of Engineering Pulchowk Campus\\[1cm]
 \end{minipage}
 
