--- a/major_project_report/sec/references.tex
+++ b/major_project_report/sec/references.tex
@@ -4,90 +4,89 @@
 \addcontentsline{toc}{section}{REFERENCES}
 \begin{thebibliography}{9}
 	\bibitem{dataset}
-		myPersonality DataSet. Retrieved January,2017 from \url{ http://mypersonality.org/wiki/doku.php}
+		D. Stillwell and M. Kosinski. (2017, January). myPersonality DataSet. Retrieved from \url{ http://mypersonality.org/wiki/doku.php}
 
  \bibitem{fivefactormodel}
-	 Five Factor Model of Personality: Goldberg LR, et al.(2006) \textit{The international personality item pool and the future of pulic-domain personality measures J Res Pers}, 40(1):8486.
+	 Goldberg LR, et al. (2006). Five Factor Model of Personality:  \textit{The international personality item pool and the future of pulic-domain personality measures J Res Pers}, 40(1):8486.
 
  \bibitem{tupes}
- E. Tupes and R. Christal Recurrent personality factors based on trait ratings.(1992) \textit{Journal of Personality}, 60(2): 225251.
+ E. Tupes and R. Christal. (1992). Recurrent personality factors based on trait ratings. \textit{Journal of Personality}, 60(2): 225251.
 
  \bibitem{mccrae}
- R. McCrae and O. John. An introduction to the five-factor model and its applications.(1992)\textit{Journal of Personality}, 60(2): 175215.
+ R. McCrae and O. John. (1992). An introduction to the five-factor model and its applications. \textit{Journal of Personality}, 60(2): 175215.
 
  \bibitem{laplante}
- L. Audery. Improving music recommender systems: What can we learn from research on music tastes?(2014)\textit{ISMIR}.
+ L. Audery. (2014). Improving music recommender systems: What can we learn from research on music tastes? \textit{ISMIR}.
 
  \bibitem{bruce}
- B. Ferwerda and S. Markus. Enhancing Music Recommender Systems with Personality Information and Emotional States: A Propoasal.(2014)\textit{UMAP Workshops}.
+ B. Ferwerda and S. Markus. (2014). Enhancing Music Recommender Systems with Personality Information and Emotional States: A Propoasal. \textit{UMAP Workshops}.
 
  \bibitem{melissa}
-	 O. Melissa, A. Micareli and G. Sansonetti. A Comparative Analysis of Personaility Based Music Recommender Systems. \textit{EMPIRE RecSys}, 2016
+	 O. Melissa, A. Micareli and G. Sansonetti. (2016). A Comparative Analysis of Personaility Based Music Recommender Systems. \textit{EMPIRE RecSys}
 
  \bibitem{gonzalez}
- G. Gonzalez and M. Miquel. Embedding Emotional Context in Recommendation System.(2007)\textit{20th International Florida Artifical Intelligence Research Society Conference-FLAIRS}.
+ G. Gonzalez and M. Miquel. (2017). Embedding Emotional Context in Recommendation System. \textit{20th International Florida Artifical Intelligence Research Society Conference-FLAIRS}.
 
  \bibitem{resnick}
- P.Resnick and H.R. Vairan. Recommender Systems.(1997) \textit{Communications of the ACM}, 40(3):56-58.
+ P. Resnick and H. R. Vairan. (1997). Recommender Systems. \textit{Communications of the ACM}, 40(3):56-58.
 
  \bibitem{nunes}
-Nunes, M.A.S.N(2008). \textit{Recommender system based on personality traits}
+Nunes, M.A.S.N. (2008). \textit{Recommender system based on personality traits}
 \bibitem{kd}
-	G. Parsa.(2015) Document Classification. Retrieved July,2017 from \url{http://www.kdnuggets.com/2015/01/text-analysis-101-document-classification.html}
+	G. Parsa. (2017, July). Document Classification. Retrieved from \url{http://www.kdnuggets.com/2015/01/text-analysis-101-document-classification.html}
 \bibitem{stopwords}
-	Dropping common stop words. Retrieved March,2017 from \url{http://nlp.stanford.edu/IR- book/html/htmledition/dropping-common-terms-stop-words-t1.html}
+	Dropping common stop words. (2017, March). Retrieved from \url{http://nlp.stanford.edu/IR- book/html/htmledition/dropping-common-terms-stop-words-t1.html}
 \bibitem{porter}
-	M.F. Porter. (2001). Stemming Algorithm \textit{Snowball: A Language for Stemming Algorithms}
+	M. F. Porter. (2001). Stemming Algorithm \textit{Snowball: A Language for Stemming Algorithms}
 \bibitem{pos}
- Part of Speech Tagging.(2016). Retrieved March,2017 from \url{http://en.wikipedia.org/wiki/Part-of-speech tagging}
+ Part of Speech Tagging. (2017, March). Retrieved from \url{http://en.wikipedia.org/wiki/Part-of-speech tagging}
  \bibitem{vector}
-Textual data and vector space model. Retrieved July,2017 from \url{http://www.calpoly.edu/~dsun09/lessons/textprocessing}
+Textual data and vector space model. (2017, July). Retrieved from \url{http://www.calpoly.edu/~dsun09/lessons/textprocessing}
 
 \bibitem{naive}
-	Naive Bayes text classification. Retrieved July,2017 from \url{https://nlp.stanford.edu/IR-book/html/htmledition/naive-bayes-text-classification-1.html}
+	Naive Bayes text classification. (2017, July). Retrieved from \url{https://nlp.stanford.edu/IR-book/html/htmledition/naive-bayes-text-classification-1.html}
 
 \bibitem{additive}
-	Additive Smoothing. Retrieved July,2017 from \url{https://en.wikipedia.org/wiki/Additive_smoothing}
+	Additive Smoothing. (2017, July). Retrieved from \url{https://en.wikipedia.org/wiki/Additive_smoothing}
 
 \bibitem{cross}
-Cross Validation. Retrieved July,2017 from \url{https://www.cs.cmu.edu/~schneide/tut5/node42.html}
+Cross Validation. (2017, July). Retrieved from \url{https://www.cs.cmu.edu/~schneide/tut5/node42.html}
 \bibitem{analysis}
-Data Analysis. Retrieved February,2017 from \url{https://www.ngdata.com/what-is-data-analysis}
+Data Analysis. (2017, February). Retrieved from \url{https://www.ngdata.com/what-is-data-analysis}
 
 \bibitem{rdef}
- Recommender System. Retrieved June,2017 from \url{http://recommender-system.blogspot.com/2012_10_01_archive.html}
+ Recommender System. (2017, July). Retrieved from \url{http://recommender-system.blogspot.com/2012_10_01_archive.html}
  \bibitem{demographic}
-	 Safoury, L., and Salah, A.(2013). Exploiting user demographiattributes for solving cold-start problem in recommender system.\textit{Lecture Notes on Software Engineering}, 1(3), 303
+	 L. Safoury and A. Salah. (2013). Exploiting user demographiattributes for solving cold-start problem in recommender system.\textit{Lecture Notes on Software Engineering}, 1(3), 303
 \bibitem{recommend}
-	A. Tejal.(2015) A Survey on Recommendation System. \textit{International Journal of Innovative Research in Advanced Engineering(IJIRA)}.
+	A. Tejal. (2015). A Survey on Recommendation System. \textit{International Journal of Innovative Research in Advanced Engineering(IJIRA)}.
 \bibitem{rmain}
-	F.O. Isinkaye, Y.O. Folajimi and B.A. Ojokoh.(2015). Recommendation Systems: Principles, methods and evaluation \textit{Egyptian Informatics Journal}.
+	F. O. Isinkaye, Y. O. Folajimi and B. A. Ojokoh. (2015). Recommendation Systems: Principles, methods and evaluation \textit{Egyptian Informatics Journal}.
 \bibitem{latent}
-	Non-negative matrix factorization. Retrieved July,2017 from \url{https://www.slideshare.net/BenjaminBengfort/non-negative-matrix-factorization}
+	Non-negative matrix factorization. (2017, July). Retrieved from \url{https://www.slideshare.net/BenjaminBengfort/non-negative-matrix-factorization}
 \bibitem{manning}
-Christopher Manning, Stanford NLP - Standford NLP Group. Retrieved June,2017 from \url{https://nlp.standford.edu/manning}
+C. Manning. (2017, June). Stanford NLP - Standford NLP Group. Retrieved from \url{https://nlp.standford.edu/manning}
 \bibitem{coursera}
-	Recommendation System, Coursera. Retrieved July,2017 from \url{https://coursera.org/learn/machine-learning}
+	Recommendation System, Coursera. (2017, July). Retrieved from \url{https://coursera.org/learn/machine-learning}
 \bibitem{traits}
-Studying the big five personality traits-UK Essays. Retrieved January,2017 from \url{https://ukessays.com/essays/psychology/studying-the-big-five-personality-traits.php}
+Studying the big five personality traits-UK Essays. (2017. January). Retrieved from \url{https://ukessays.com/essays/psychology/studying-the-big-five-personality-traits.php}
 
 \bibitem{eval}
-D. Alexander. (2009) Collaborative Fileringand Recommender Systems
+D. Alexander. (2009). Collaborative Fileringand Recommender Systems
 \bibitem{tfidf}
-TF-IDF. Retrieved June,2017 from \url{http://www.tfidf.com/} 2015
+TF-IDF. (2017, July). Retrieved from \url{http://www.tfidf.com/} 2015
 \bibitem{api}
-Facebook Graph API. Retrieved July,2017 from \url{https://developers.facebook.com/docs/graph-api}
+Facebook Graph API. (2017, July). Retrieved from \url{https://developers.facebook.com/docs/graph-api}
   \bibitem{ng}
-  Andrew Ng. (2016). Machine Learning [Video lectures].
-  Retrieved March, 2017 from \url{https://www.coursera.org/learn/machine-learning}.
+  Andrew Ng. (2017, March). Machine Learning [Video lectures]. Retrieved from \url{https://www.coursera.org/learn/machine-learning}.
 
   \bibitem{wikilog}
-  Logistic Regression. (n.d.). {\em In Wikipedia}. Retrieved July, 2017 from
+  Logistic Regression. (n.d.). (2017, July). Retrieved from
   \url{https://en.wikipedia.org/wiki/Logistic_regression}.
 
   \bibitem{jason}
-  Jason Brownlee. (2017). Logistic Regression for Machine Learning [Online tutorial].
-  Retrieved August, 2017 from
+  Jason Brownlee. (2017, August). Logistic Regression for Machine Learning [Online tutorial].
+  Retrieved from
   \url{http://machinelearningmastery.com/logistic-regression-for-machine-learning}.
 
 \end{thebibliography}
