--- a/major_project_report/sec/theoretical_background.tex
+++ b/major_project_report/sec/theoretical_background.tex
@@ -303,22 +303,24 @@ The corresponding first-order derivatives then becomes:
   \end{cases}
   \nonumber
 \end{align}
+Regularization helps to solve over fitting problem in machine learning. Simple model will be a very poor generalization of data. At the same time, complex model may not perform well in test data due to over fitting. It is necessary to choose the right model in between simple and complex model. Regularization helps to choose preferred model complexity, so that model is better at predicting. Regularization is nothing but adding a penalty term to the objective function and control the model complexity using that penalty term.
+
 \subsubsection{ Naive Bayes}
-Naive Bayes is one of the model used for the classification under the``Bayesian Classifier''. In machine learning, Naive Bayes classifier are the family of simple probabilistic classifiers based on Baye's theory with the assumption of ``independence'' between the features. If the dependence between the features exists Bayesian Network will be used for the classification. The major advantage of the Naive Bayes is it's simplicity and highly scalability and ability to work on huge dataset too. Despite the oversimplified assumption, Naive Bayes have worked quite well in many complex real world situation.
+Naive Bayes is one of the model used for the classification under the``Bayesian Classifier''. In machine learning, Naive Bayes classifier are the family of simple probabilistic classifiers based on Bayes theory with the assumption of ''independence'' between the features. If the dependence between the features exists Bayesian Network will be used for the classification. The major advantage of the Naive Bayes is it's simplicity and highly scalability and ability to work on huge dataset too. Despite the oversimplified assumption, Naive Bayes have worked quite well in many complex real world situation.
 They are probabilistic, which means that they calculate the probability of each category for a given sample, and output the category with the highest one. It is comparable to the unigram language model created on each set of classes. It is widely used for text classification which used in various fields like email sorting, language detection etc. \\
 There are various variation of Naive Bayes which are:
 \begin{enumerate}
 \item Multi-variate Bernoulli Naive Bayes: It is used whenever the feature vectors are binary i.e occurrence of the feature is important rather than it's count.
 \item Multinomial Naive Bayes: It is typically used for discrete counts i.e whenever the frequency of occurrence of the feature vector is important.
-\item Gaussian Naive Bayes: In this model, we assume that the feature follows a normal distribution. Instead of discrete counts, we have continuous features.
+\item Gaussian Naive Bayes: In this model, it is assumed that the feature follows a normal distribution. Instead of discrete counts, there are continuous features.
 \end{enumerate}
-In the project, multinomial naive bayes is used as the classifier as for personality prediction the frequency of occurrence of each feature is the feature vector is important and distribution of the feature is in discrete form.
+In the project, multinomial Naive Bayes is used as the classifier as for personality prediction the frequency of occurrence of each feature is the feature vector is important and distribution of the feature is in discrete form.
 %\end{itemize}
 
 \subsubsection{Multinomial Naive Bayes}
 \paragraph{Problem Formulation}\hfill
 
-In order to understand how Naive Bayes classifiers \cite{naive} work, we have to briefly understand the concept of Bayes' rule. The probability model was formulated by Thomas Bayes.\\
+In order to understand how Naive Bayes classifiers \cite{naive} work, briefly understanding the concept of Bayes' rule is important. The probability model was formulated by Thomas Bayes.\\
 Given the set of features $(x_1,x_2,x_3,\cdots, x_n)$, \\
 Mathematically Bayes theorem can be written as:
 \begin{equation}\label{eq:1}
@@ -341,7 +343,7 @@ which is the required equation of Naive Bayes used for the classification of doc
 
 \paragraph{Additive Smoothing}\hfill
 
-In statistics, additive smoothing \cite{additive}, also called Laplace smoothing is atechnique used to smooth categorical data. Give an observation $x = (x_1,x_2,\cdots,x_d)$ from a multinomial distribution with N trials and paramater vector $\theta = (\theta_1,\theta_2,\cdots,\theta_d)$, a smoothed version of data given the estimator:
+In statistics, additive smoothing \cite{additive}, also called Laplace smoothing is a technique used to smooth categorical data. Give an observation $x = (x_1,x_2,\cdots,x_d)$ from a multinomial distribution with N trials and paramater vector $\theta = (\theta_1,\theta_2,\cdots,\theta_d)$, a smoothed version of data given the estimator:
 \begin{equation}\label{eq:smooth}
 	\theta_i = \frac{x_i + \alpha}{N+ \alpha d}
 \end{equation}
@@ -354,7 +356,7 @@ Underfitting \cite{naive} in the Naive Bayes Classifier, can occur if the probab
 \begin{equation}
 P(C_k|x) = \log p(C_k) + \sum_{i=1}^{k} \log(x|C_k)
 \end{equation}
-which is the final equation used in the project for the classification of user's status on facebook into the personality.
+which is the final equation used in the project for the classification of user's status on Facebook into the personality.
 
 \paragraph{Overfitting}\hfill
 
@@ -365,7 +367,7 @@ In the project $5^{th}$-fold cross validation technique has been applied in whic
 
 Naive Bayes classifier, as seen in \ref{eq:naive}, classifies features set into a class via the multiplication of the prior and conditional probability which requires their computation each time the classifier tries to classify the feature into class.
 
-In order to solve the above problem, conditional and prior probability is precomputed and stored in \textbf{``HashTable''} \cite{naive}, where the conditional probability of each feature set is stored, which can be easily be retrieved and used for the classification. Here hashtable has been implemented as dictionary object in python as dictionary in low level are stored as hash value pair in memory.
+In order to solve the above problem, conditional and prior probability is precomputed and stored in \textbf{``HashTable''} \cite{naive}, where the conditional probability of each feature set is stored, which can be easily be retrieved and used for the classification. Here hash table has been implemented as dictionary object in python as dictionary in low level are stored as hash value pair in memory.
 
 After the detection of the personality, this information is used as the metric for computation of similar user, in the recommendation engine(collaborative filtering) in order to observe it's effect on the recommendation.
 
@@ -373,7 +375,7 @@ After the detection of the personality, this information is used as the metric f
 Data Analysis \cite{analysis} is a primary component of data mining and business intelligence and is key to gaining the insight that derives business decisions. Data analysis is a proven way for organizations and enterprises to gain the information they need to make better decisions, server their customers and increase productivity and revenue. Besides, with the growth of internet, there is so much of digital data and information available and data analysis has become more necessary than ever.
 Some of the data analysis techniques are:
 \begin{itemize}
-	\item Descriptive: It is analysis techniques that uses aggregation and data mining to provide insight into past and answer ``What has happend?''.It involves the calculation of simple measures of composition and distribution of variables. They are often used to describe relationship in data. Such as: total stock in inventory, average money spent per customer etc.
+	\item Descriptive: It is analysis techniques that uses aggregation and data mining to provide insight into past and answer ''What has happened?''. It involves the calculation of simple measures of composition and distribution of variables. They are often used to describe relationship in data. Such as: total stock in inventory, average money spent per customer etc.
 	\item Predictive: It is the process of extracting information from existing data sets in order to determine patterns and predict future outcomes and trends. It encompasses a variety of statistical techniques from predictive modeling, machine learning and data-mining.Such as: predicting what items customers will purchase together, how sales might close at the end of the year etc.
 	\item Prescriptive:It is a data analysis technique that allows user to prescribe a number of different possible actions to and guide them towards a solution. In a nut-shell, these analytics are all about providing advice.
 		\begin{itemize}
@@ -502,7 +504,7 @@ Content based filtering can outperform the collaborative, whenever the the ratio
 Collaborative filtering \cite{rmain}is a domain-independent prediction technique used for content that cannot easily and adequately be described by meta data such as movies and music. Collaborative filtering technique works by building a database(user-item) matrix of preference for items by users. It then matches users with relevant interest and preferences by calculating similarities between their profiles to make recommendations. Such users build a group called neighborhood. An user get recommendation to those items that he has not rated before but were already positively rated by users in his neighborhood. Recommendation that are produced by CF can be either prediction or recommendation. Prediction is a numerical value expressing $R_{ij}$, expressing the predicted score of item 'j' for the user 'i', which recommendation is a list of top N items that the user will like the most as shown in the figure below. The technique of collaborative filtering can be divided into two categories: memory based and model based.
 \begin{itemize}
 	\item Memory Based:
-		This approach uses user rating data to compute the similarity between users or items. This is used for making recommendations. This was an early approach used in many commercial systems. It's effective and easy to implement. Typical examples of this approaches are neighborhood-based CF and item-based/user-based top-N recommendations. The user based top-N recommendation algorithm uses a similarity based vector model to identify the $k$ most similar users to an active user. After the $k$ msot similar users are found their corresponding user-item matrices are aggregated to identify the set of items ot be recommended.
+		This approach uses user rating data to compute the similarity between users or items. This is used for making recommendations. This was an early approach used in many commercial systems. It's effective and easy to implement. Typical examples of this approaches are neighborhood-based CF and item-based/user-based top-N recommendations. The user based top-N recommendation algorithm uses a similarity based vector model to identify the $k$ most similar users to an active user. After the $k$ most similar users are found their corresponding user-item matrices are aggregated to identify the set of items to be recommended.
 The advantages with this approach include: the explainability of the results, which is an important aspect of recommendation system, easy creation and use, easy facilitation of new data, content-independence of the items being recommended, good scaling with co-rated items.There are several disadvantages with this approach. It's performance decreases when data gets sparse, which occurs frequently with web-related items. This might hinder the scalability of this approach and creates problems with large datasets.
 
 \item Model Based:
@@ -532,7 +534,7 @@ The different approaches used for the modeling of hybrid recommendation system a
 \begin{itemize}
 	\item Weighted: The scores of several recommendation techniques are combined together to produce a single recommendation.
 	\item Switching: The system switches between recommendation techniques depending on the current situation.
-	\item Mixed: Recommendation from several different recommenders are presented at the same time.
+	\item Mixed: Recommendation from several different recommender systems are presented at the same time.
 	\item Feature Combination: Feature from different recommendation data sources are thrown together into a single recommendation algorithm.
 	\item Cascade: On recommender refines the recommendation given by another.
 	\item Feature augmentation: Output from one technique is used as an input feature to another.
@@ -544,13 +546,13 @@ The issues \cite{recommend} that can result in the recommendation system can be 
 \item Data Collection: The data used by recommendation engines can be categorized into explicit and implicit data. Explicit is all data the user themselves feed into the system. The collection of explicit data must not be intrusive or time consuming. Implicit data source in e-commerce is the transaction data. Implicit data needs to be analyzed before it can be used to describe user features or user-item ratings.
 \item Cold Start/Ramp-Up: The cold start problem occurs when too little/no rating data is available in the initial state. The recommendation system then lack data to produce appropriate recommendations. They mostly occur in the learning models. Two cold start problems are new user problem and new item problem.
 \item Stability Vs Plasticity: The converse of the cold start problem is the stability vs plasticity. When consumers have rated so many items their preferences in the established user profiles are difficult to change.
-\item Sparsity: In most use cases for recommendation systems, due to the catalog sizes of e-business vendors, the count of rating already obtained is very small related to the count of ratings that need to be predicted. But collaborative filtering techiques focuses on an overlap in ratings and have difficulties when the space of rating is sparse(few user have rated the similar items). Sparsity in the user-item rating matrix degrades the quality of the recommendations.
+\item Sparsity: In most use cases for recommendation systems, due to the catalog sizes of e-business vendors, the count of rating already obtained is very small related to the count of ratings that need to be predicted. But collaborative filtering techniques focuses on an overlap in ratings and have difficulties when the space of rating is sparse(few user have rated the similar items). Sparsity in the user-item rating matrix degrades the quality of the recommendations.
 \item Performance and Scalability: Performance and scalability are important issues for recommendation systems as e-commerce websites must be able to determine recommendations in real-time and often deal with huge data sets of millions of users and items. The big growth rates of e-business are making the sets even larger in the user dimension.
 \item User Input Consistency: Recommendation techniques that work with user-to-user correlations like collaborative filtering or demographic, depends on more correlation coefficients between the users in a data set. Users can be categorized into three classes based on their correlation coefficients with other users. The majority of users fall into the class of ``white sheep'', where there is a high rating correlation with other users. Resulted engines can easily find recommendations for them. The opposite type is the ``black sheep'' where there are only few or no correlating users. This makes it quite difficult to find recommendations for them. The bigger problem is the ``gray sheep'' problem where users have different opinions or an unusual taste that results in low correlation coefficients with many users. They fall on a border opinions or an unusual taste that result in low correlation coefficients with many users. They fall on a border between user tastes. Recommendations for them are very difficult to find and they also cause different recommendations for their correlated users.
 \item Privacy: Privacy is an important issue in recommendation systems. To provide personalized recommendations, recommendation systems must know something regarding to users. In fact, the more the system know, the more precise the recommendation can get. Users are concerned about what information is gathered, how it is used, and if it is stored. These privacy affect both the collection of explicit and implicit data. Regarding explicit data, users are not interested to disclose information about themselves and their interests. If questionnaires get too personal, user may give false information in order to protect their privacy.
 \end{enumerate}
 \subsection{Recommendation Model for Experimentation}
-We are trying to experiment on how personality impacts on the collaborative filtering model and compare it with other some popular models(global baseline, latent factor).
+The purpose of this study is to understand how personality impacts on the collaborative filtering model and compare it with other some popular models (global baseline, latent factor).
 Hence the recommendation model used in the project are:
 \begin{itemize}
 \item Global Baseline Algorithm
@@ -601,7 +603,7 @@ $baseline_{y,i}$ is the baseline estimate on item $i$ by user $y$ \\
 $s_{x,y}$ is the similarity between user $x$ and $y$ \\
 $N$ is the total neighbors used for the recommendation
 \subsubsection{Matrix Factorization}
-Matrix factorization \cite{latent} involves in a factorization of a matrix to find out tow or more matrices such that when fators are multiplied together, original matrix in obtained. In recommender system, the matrix factorization is employed to predict the missing ratings such that the values would be consistent with the existing rating in the matrix. The intuition behind using matrix factorization, is that it is assumed there should be some latent features that determine how a user rates an item. For example two users would give high rating to a certain music if they both like the singer of the music or if the music is of same genre. Hence if we can discover these latent features, we should be able to predict a rating with respect to a certain user and a certain item, because the features associated with the user should match with the features associated with the item.
+Matrix factorization \cite{latent} involves in a factorization of a matrix to find out tow or more matrices such that when fators are multiplied together, original matrix in obtained. In recommender system, the matrix factorization is employed to predict the missing ratings such that the values would be consistent with the existing rating in the matrix. The intuition behind using matrix factorization, is that it is assumed there should be some latent features that determine how a user rates an item. For example two users would give high rating to a certain music if they both like the singer of the music or if the music is of same genre. Hence, if these latent features can be discovered, we should be able to predict a rating with respect to a certain user and a certain item, because the features associated with the user should match with the features associated with the item.
 
 In trying to discover the different features, we also make the assumptions that the number of features would be smaller than the number of users and the number of items. Suppose we have a set $U$ of users and set $D$ of items. Let $R$ of size $|U| * |D| $ be the matrix that contains all the ratings that the users have assigned to the items. We also assume that we would like to discover $K$ latent features. So our task here is to find out two matrices $P$ of size $|U| * K$ and $Q$ of size ${|D| * K}$ such that their products approximates R.
 \begin{equation}
@@ -624,7 +626,7 @@ Now, in order to find a way to obtain $P$ and $Q$. One way to approach this prob
 \end{split}
 \end{equation}
 Here we consider the squared error because the estimated rating can be either higher or lower than the real rating.
-To minimize the error, we have to know in which direction we have to modify the values of $p_{ik}$ and $q_{kj}$. In order words, we need to know the gradient at the current values and therefore we differentiate the above equation with respect to those two variables separately:
+To minimize the error, it is necessary to know in which direction we have to modify the values of $p_{ik}$ and $q_{kj}$. In order words, we need to know the gradient at the current values and hence differentiate the above equation with respect to those two variables separately:
 \begin{equation}
 \begin{split}
 	\frac{\partial {e_{ij}}^2}{\partial p_{ik}} & = -2(r_{ij}-\widehat{r_{ij}})(q_{kj}) \\
@@ -638,7 +640,7 @@ And,
 	& = -2e_{ij}p_{kj}
 \end{split}
 \end{equation}
-Now, we can formulate the update rules for both $p_{ik}$ and $q_{kj} $ as:
+Now, the update rules can be formulated for both $p_{ik}$ and $q_{kj} $ as:
 \begin{equation}
 \begin{split}
 	p_{ik} &= p_{ik} + \alpha \frac{\partial {e_{ij}}^2}{\partial p_{ik}} \\
@@ -653,7 +655,7 @@ And,
 \end{split}
 \end{equation}
 Here, $\alpha$ is a constant called learning rate whose value determines the rate of approaching the minimum. Usually, $\alpha$ is chosen to be between 0.001 to 0.1, this is because if we make too large step towards the minimum, we may run into the risk of missing the minimum and end up oscillating around minimum.
-Using the above rule we can then iteratively perform the operation until the error converges to it's minimum or run the process for the finite number of iteration.
+Using the above rule, it is possible to iteratively perform the operation until the error converges to it's minimum or run the process for the finite number of iteration.
 \paragraph{Regularization}\hfill
 
 Here, in order to avoid over-fitting, regularization is introduced by adding the additional $\beta$ and modifying the squared error as:
